--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -74,8 +74,7 @@ button {
 
 html,
 body {
-  width: 100vw;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -85,7 +84,6 @@ body {
   font-family: var(--font-Roboto), var(--font-NotoSansKR), sans-serif;
   background: transparent;
   appearance: none;
-  overflow: hidden auto;
 
   & .hide-header {
     width: 1px;
