--- a/src/components/Navigator/Navigator.module.scss
+++ b/src/components/Navigator/Navigator.module.scss
@@ -1,21 +1,19 @@
 $channelTalkButtonHeight: 56px;
 
 .blur-background {
-  background-color: tomato;
-
   padding: 12px;
   border-radius: 8px;
 
   position: fixed;
-  bottom: $channelTalkButtonHeight + 7.5px;
-  right: 1%;
+  bottom: $channelTalkButtonHeight + 12px;
+  right: 1.5%;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 8px;
 
-  touch-action: none;
+  user-select: none;
 
   @media (min-width: 500px) {
     bottom: $channelTalkButtonHeight + 30px;
