--- a/src/components/Navigator/Navigator.module.scss
+++ b/src/components/Navigator/Navigator.module.scss
@@ -1,12 +1,14 @@
 $channelTalkButtonHeight: 56px;
 
-.blur-background {
+nav.blur-background {
   padding: 12px;
   border-radius: 8px;
+  box-sizing: border-box;
 
   position: fixed;
   bottom: $channelTalkButtonHeight + 12px;
   right: 1.5%;
+  z-index: 1;
 
   display: flex;
   flex-direction: column;
