--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -1,3 +1,4 @@
+// index.tsx (기본 로더)
 .loader {
   width: 100%;
   height: 100%;
@@ -41,5 +42,28 @@
   }
   100% {
     transform: translateX(200%);
+  }
+}
+
+// CanvasLoader.tsx ( three/drei 로더 )
+.canvas-loader {
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+  & > img {
+    object-fit: cover;
+  }
+
+  & > .progress {
+    color: #e29e63;
+    font-size: 5rem;
+    font-weight: 700;
+    text-shadow: 1px 1px 2px #111111, 0 0 1em #ffffff, 0 0 0.2em #ffffff;
+
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    z-index: 2;
   }
 }
